--- a/styles/main.css
+++ b/styles/main.css
@@ -1,16 +1,13 @@
 /* 
     The goal is to make the page look like a notebook 
-    which would be interactve and write back to you,
-    giving you proper suggestions for your list of tasks.
+    as if you were writing down your tasks on a to-do list.
 
     I included some sticky notes, too!
 */
 
 .container {
     display: flex;
-    flex-direction: column;
-    /* align-items: center; */
-   
+    flex-direction: column;   
 }
 
 body {  
@@ -26,6 +23,7 @@ body {
     margin-left: 12%;
     margin-top: 80px;
     max-width: 700px;
+    min-height: 1000px;
 }
 
 h1, h2, label {
@@ -42,11 +40,25 @@ h1 {
 h2 {
     font-size: 24px;
 }
+
 p {
     font-family: klee-one, sans-serif;
     font-style: normal;
     font-weight: 800;
     font-size: 18px;
+}
+
+/* Temporary highlight for emphasis on directions */
+#directions {
+    background-color: rgba(255, 255, 0, 0.453);
+}
+#begin {
+    background-color: rgb(255, 244, 158);
+    box-shadow: 5px 8px 5px rgba(156, 114, 0, 0.551);
+    margin-top: 20px;
+    margin-left: -3px;
+    margin-bottom: 20px;
+    padding: 15px;
 }
 
 label {
@@ -78,7 +90,7 @@ input:hover {
     width: 50px;
 }
 
-/* slider */
+/* Slider */
 /* https://www.w3schools.com/howto/howto_js_rangeslider.asp */
 #stressLevel {
     width: 500px;
@@ -102,11 +114,3 @@ input#submit:hover {
     cursor: pointer;
 }
 
-#outputSect, #begin {
-    background-color: rgb(255, 244, 158);
-    box-shadow: 5px 8px 5px rgba(156, 114, 0, 0.551);
-    margin-top: 20px;
-    margin-left: -3px;
-    margin-bottom: 20px;
-    padding: 15px;
-}
