--- a/styles/about.css
+++ b/styles/about.css
@@ -67,3 +67,18 @@ nav {
     justify-content: center;
     font-size: 16px;
 }
+
+#toMain {
+    position: fixed;
+    left: 1%;
+    top: 1%;
+    font-family: blockhead-black-face, sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    text-decoration: none;
+}
+
+#toMain:hover {
+    font-size: 20px;
+}
