--- a/styles/main.css
+++ b/styles/main.css
@@ -121,3 +121,18 @@ input#submit:hover {
     cursor: pointer;
 }
 
+#about {
+    position: fixed;
+    right: 5%;
+    top: 1%;
+    font-family: blockhead-black-face, sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    text-decoration: none;
+}
+
+#about:hover {
+    font-size: 24px;
+}
+
