--- a/styles/results.css
+++ b/styles/results.css
@@ -9,7 +9,6 @@
 .container {
     display: flex;
     flex-direction: column;
-   
 }
 
 body {  
@@ -23,7 +22,7 @@ body {
     padding: 0px;
     margin: 0px;
     margin-left: 12%;
-    margin-top: 40px;
+    margin-top: 60px;
     max-width: 700px;
     min-height: 1000px;
 }
@@ -33,6 +32,36 @@ h1, h2, label {
     font-style: normal;
     font-weight: 400;
     justify-content: center;
+}
+
+#toMain {
+    position: fixed;
+    left: 12%;
+    top: 1%;
+    font-family: blockhead-black-face, sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    text-decoration: none;
+}
+
+#toMain:hover {
+    font-size: 24px;
+}
+
+#about {
+    position: fixed;
+    right: 5%;
+    top: 1%;
+    font-family: blockhead-black-face, sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    text-decoration: none;
+}
+
+#about:hover {
+    font-size: 24px;
 }
 
 h1 {
@@ -57,6 +86,10 @@ li {
     list-style: none;
     margin: 0px;
     padding: 0px;
+    font-family: klee-one, sans-serif;
+    font-style: none;
+    font-weight: 800;
+    font-size: 20px;
 }
 
 input {
