--- a/styles/results.css
+++ b/styles/results.css
@@ -33,16 +33,19 @@ h1, h2, label {
     font-weight: 400;
     justify-content: center;
 }
-
 #toMain {
     position: fixed;
-    left: 12%;
+    left: 1%;
     top: 1%;
     font-family: blockhead-black-face, sans-serif;
     font-style: normal;
     font-weight: 400;
-    font-size: 20px;
+    font-size: 18px;
     text-decoration: none;
+}
+
+#toMain:hover {
+    font-size: 20px;
 }
 
 #toMain:hover {
